--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinity Tour</title>
+    <style>
+      *{
+        box-sizing: border-box;
+      }
+      body{
+        margin: 0;
+        padding: 0;
+        
+      }
+    
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
