Further work on nav bar and signin page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
       *{
         box-sizing: border-box;
+        font-family: "Roboto", system-ui !important;
+
       }
       body{
         margin: 0;
