--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         font-family: "Roboto", system-ui !important;
 
       }
+      h1,h2,h3,h4,h5,h6,p{
+        margin: 0;
+        padding: 0;
+      }
       body{
         margin: 0;
         padding: 0;
